# telegram_simple_rag

./: .env.template  README.md  pyproject.toml
src/tg_rag/: bot.py
src/tg_rag_smolagents/: bot.py  download_model.py  utils.py
